--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -93,7 +93,6 @@ body,
 #___gatsby,
 #gatsby-focus-wrapper {
     min-height: 100vh;
-    overflow-x: hidden;
 }
 
 #gatsby-focus-wrapper {
