--- a/src/templates/Docs/style.scss
+++ b/src/templates/Docs/style.scss
@@ -220,6 +220,7 @@
             box-shadow: inset 0 0 6px rgba(black, 0.1);
             background-color: $light-350;
             padding: 0 0.5rem;
+            white-space: pre-line;
 
             pre {
                 padding: 1.25rem;
